# art-from--narratological-algorithmic-lenses

./: AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  ecosystem.yaml  pyproject.toml  seed.yaml
.github/workflows/: ci.yml
docs/pitch/: index.html
src/art_from_narratological_lenses/: __init__.py  lens_renderer.py  narrative_engine.py
tests/: test_narrative_engine.py
