[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "art-from-narratological-lenses"
version = "0.1.0"
description = "Interactive web experience exploring narrative structures via visual algorithmic lenses"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "organvm-ii-poiesis"},
]
keywords = ["narratology", "generative-art", "visualization", "narrative-structures", "interactive-art"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "flask>=3.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/organvm-ii-poiesis/art-from--narratological-algorithmic-lenses"
Repository = "https://github.com/organvm-ii-poiesis/art-from--narratological-algorithmic-lenses"
"Source Theory" = "https://github.com/organvm-i-theoria/narratological-algorithmic-lenses"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
